Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7524 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -82,6 +82,7 @@ foxtrick.ShowForumPrefButton.desc=Приказује иконицy за поде
 foxtrick.AlltidFlags.desc=Додаје Аллтид заставице и линкове за кориснике у оквир поруке на форуму.
 foxtrick.AlltidFlags.LinkFlagToLeague.desc=Линкуј прво на Хеттрик страницу лиге.
 foxtrick.AlltidFlags.LinkFlagToAlltid.desc=Линкуј прво на Аллтид страницу лиге.
+foxtrick.Links.desc=Основни модул без којег остали модули за линкове не могу да функционишу.
 foxtrick.LinksLeague.desc=Додаје неколико екстерних линкова на страницу лиге.
 foxtrick.LinksTeam.desc=Додаје неколико екстерних линкова на страницу тима.
 foxtrick.LinksCountry.desc=Додаје неколико екстерних линкова на страницу државе.
@@ -948,6 +949,9 @@ LocalTime.hattrick=Хеттрик време
 LocalTime.hattrick.title=Званично Хеттрик време. Кликните на сат да пребаците на локално време.
 LocalTime.local=Локално време
 LocalTime.local.title=Време у локалној зони. Кликните на сат да пребаците на Хеттрик време.
+
+# Links
+Links.feeds=Линкови до изворних фајлова са листама линкова(сваки линк до фајла у посебном реду)
 
 #actions
 Copy=Копирај
