Minor spelling issues ans a few new. (swedish locale)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7550 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sv/foxtrick.properties
+++ b/content/locale/sv/foxtrick.properties
@@ -1313,9 +1313,9 @@ foxtrick.prefs.captionHTCountry=Land
 foxtrick.prefs.captionCleanupBranch=Lagrade inställningar
 foxtrick.prefs.captionLoadSavePrefs=Exportera eller importera inställningar
 foxtrick.prefs.labelCleanupBranch=Återställ standardinställningar (Endast preferenser, inga personliga inställningar.)
-foxtrick.prefs.oauth.delete=Radera OAuth poletten/hemlig för det valda laget.
+foxtrick.prefs.oauth.delete=Delete OAuth token/secret for the selected team.
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.oauth.delete.desc=Gäller endast för denna webläsare. För att helt ta bort tillståndet för FoxTrick tillgång till ett lags data behöver du använda Hattrick's {CHPP management}.
+foxtrick.prefs.oauth.delete.desc=Only applies to this browser. To entirely revoke FoxTrick's access for a team, use Hattrick's {CHPP management}.
 foxtrick.prefs.labelDisableAll=Inaktivera alla moduler
 foxtrick.prefs.labelSavePrefs=Exportera inställningar och/eller personliga inställningar
 foxtrick.prefs.labelSavePrefs_Prefs=Inställningar
