more minor changes after the Swedish community had it's say in something (swedish locale)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7551 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sv/foxtrick.properties
+++ b/content/locale/sv/foxtrick.properties
@@ -315,7 +315,7 @@ foxtrick.ExtraShortcuts.Downtime.desc=Downtime Radio
 
 
 #CopyMatchID
-foxtrick.CopyMatchID.desc=Kopierar matchid vid klick på liga/cup/vänskaps-ikonen på match- och matcharkivsidan. För supportrar funkar det även på 'Öga mot öga'-sidan.
+foxtrick.CopyMatchID.desc=Kopierar matchid vid klick på liga/cup/träningsmatch-ikonen på match- och matcharkivsidan. För supportrar funkar det även på 'Öga mot öga'-sidan.
 foxtrick.HeaderFix.desc=Fixerar sidhuvudet vid scrollning (påverkar även andra sidor på HT)
 
 
@@ -670,14 +670,14 @@ transfercompare_avgprice=Medelpris
 match.type.league=Serie
 match.type.qualification=Kval
 match.type.cup=Cup
-match.type.friendly=Vänskapsmatch
-match.type.friendly.cup=Vänskapsmatch (Cupregler)
+match.type.friendly=Träningsmatch
+match.type.friendly.cup=Träningsmatch (Cupregler)
 match.type.masters=Hattrick Masters
-match.type.nt.friendly=Internationell vänskapsmatch
+match.type.nt.friendly=Internationell träningsmatch
 match.type.nt.competitive=World Cup
 match.type.youth.league=Juniorserie
-match.type.youth.friendly=Juniorvänskapsmatch
-match.type.youth.friendly.cup=Juniorvänskapsmatch (Cupregler)
+match.type.youth.friendly=Juniorträningsmatch
+match.type.youth.friendly.cup=Juniorträningsmatch (Cupregler)
 
 #Skills
 Playmaking=Spelupplägg
@@ -1059,8 +1059,8 @@ CurrentBidderShort.abbr=Bd
 Senior=Senior
 Youth=Junior
 
-team.status.booked=Vänskapsmatch bokad
-ShowFriendlyBooked.ShowFriendlies=Visa vänskapsmatcher
+team.status.booked=Träningsmatch bokad
+ShowFriendlyBooked.ShowFriendlies=Visa träningsmatcher
 
 
 
