Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7560 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -83,6 +83,7 @@ foxtrick.AlltidFlags.desc=Додаје Аллтид заставице и лин
 foxtrick.AlltidFlags.LinkFlagToLeague.desc=Линкуј прво на Хеттрик страницу лиге.
 foxtrick.AlltidFlags.LinkFlagToAlltid.desc=Линкуј прво на Аллтид страницу лиге.
 foxtrick.Links.desc=Основни модул без којег остали модули за линкове не могу да функционишу.
+foxtrick.LinksTeam.AlltidTeamCompare.desc=Додаје функцију Alltid упоређивања тимова.
 foxtrick.LinksLeague.desc=Додаје неколико екстерних линкова на страницу лиге.
 foxtrick.LinksTeam.desc=Додаје неколико екстерних линкова на страницу тима.
 foxtrick.LinksCountry.desc=Додаје неколико екстерних линкова на страницу државе.
