Change text keys for setup entries.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7581 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ar/foxtrick.properties
+++ b/content/locale/ar/foxtrick.properties
@@ -985,9 +985,9 @@ tab.changes=التغييرات
 tab.help=مساعدة
 
 foxtrick.prefs.basicPreferences=التفضيلات الأساسية
-foxtrick.prefs.captionHTLanguage=اللغة
-foxtrick.prefs.captionHTDateformat=صيغة التاريخ
-foxtrick.prefs.captionHTCountry=البلد
+foxtrick.prefs.setup.locale=اللغة
+foxtrick.prefs.setup.dateFormat=صيغة التاريخ
+foxtrick.prefs.setup.country=البلد
 
 foxtrick.prefs.captionCleanupBranch=التفضيلات المخزنة
 foxtrick.prefs.captionLoadSavePrefs=استيراد أو تصدير التفضيلات
