--- a/content/locale/bg/foxtrick.properties
+++ b/content/locale/bg/foxtrick.properties
@@ -385,9 +385,9 @@ tab.matches=Matches
 tab.forum=Forum
 tab.links=Links
 tab.about=About
-foxtrick.prefs.captionHTLanguage=Language settings
-foxtrick.prefs.captionHTDateformat=Dateformat settings
-foxtrick.prefs.captionHTCountry=Country settings
+foxtrick.prefs.setup.locale=Language settings
+foxtrick.prefs.setup.dateFormat=Dateformat settings
+foxtrick.prefs.setup.country=Country settings
 foxtrick.prefs.captionShowOnStatusBar=Display status bar icon
 foxtrick.prefs.captionCleanupBranch=Stored preferences
 foxtrick.prefs.captionLoadSavePrefs=Export or import preferences
