--- a/content/locale/ca/foxtrick.properties
+++ b/content/locale/ca/foxtrick.properties
@@ -846,9 +846,9 @@ tab.changes=Canvis
 tab.help=Ajuda
 
 foxtrick.prefs.basicPreferences=Preferències bàsiques
-foxtrick.prefs.captionHTLanguage=Idioma
-foxtrick.prefs.captionHTDateformat=Format de data
-foxtrick.prefs.captionHTCountry=País
+foxtrick.prefs.setup.locale=Idioma
+foxtrick.prefs.setup.dateFormat=Format de data
+foxtrick.prefs.setup.country=País
 foxtrick.prefs.captionShowOnStatusBar=Icona a la barra d’estat
 foxtrick.prefs.captionCleanupBranch=Preferències desades
 foxtrick.prefs.captionLoadSavePrefs=Exporta o importa les preferències
