--- a/content/locale/cs/foxtrick.properties
+++ b/content/locale/cs/foxtrick.properties
@@ -919,9 +919,9 @@ tab.changes=Změny
 tab.help=Nápověda
 
 foxtrick.prefs.basicPreferences=Základní nastavení
-foxtrick.prefs.captionHTLanguage=Jazyk
-foxtrick.prefs.captionHTDateformat=Formát data
-foxtrick.prefs.captionHTCountry=Země
+foxtrick.prefs.setup.locale=Jazyk
+foxtrick.prefs.setup.dateFormat=Formát data
+foxtrick.prefs.setup.country=Země
 pref.printDateFormat=Formát data pro tisk
 
 foxtrick.prefs.captionShowOnStatusBar=Ikona ve stavové liště
