--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -465,10 +465,10 @@ tab.links=Links
 tab.about=About
 foxtrick.prefs.PrefDefaultWarningLabel=Preset default warning
 foxtrick.prefs.PrefDefaultWarningText=Please check language and currency settings. Some foxtrick features will not work if those settings are not set appropriately.
-foxtrick.prefs.captionHTLanguage=Language settings
-foxtrick.prefs.captionHTLanguageAutoSet=Check to automatically change language whenever you change your language in Hts preferences
-foxtrick.prefs.captionHTDateformat=Dateformat settings
-foxtrick.prefs.captionHTCountry=Country settings
+foxtrick.prefs.setup.locale=Language settings
+foxtrick.prefs.setup.localeAutoSet=Check to automatically change language whenever you change your language in Hts preferences
+foxtrick.prefs.setup.dateFormat=Dateformat settings
+foxtrick.prefs.setup.country=Country settings
 foxtrick.prefs.captionShowOnStatusBar=Display status bar icon
 foxtrick.prefs.captionCleanupBranch=Stored preferences
 foxtrick.prefs.captionLoadSavePrefs=Export or import preferences
