--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -985,9 +985,9 @@ tab.changes=Änderungen
 tab.help=Hilfe
 
 foxtrick.prefs.basicPreferences=Lokalisation
-foxtrick.prefs.captionHTLanguage=Spracheinstellungen
-foxtrick.prefs.captionHTDateformat=Datumsformat
-foxtrick.prefs.captionHTCountry=Ländereinstellung
+foxtrick.prefs.setup.locale=Spracheinstellungen
+foxtrick.prefs.setup.dateFormat=Datumsformat
+foxtrick.prefs.setup.country=Ländereinstellung
 
 foxtrick.prefs.captionCleanupBranch=Gespeicherte Daten
 foxtrick.prefs.captionLoadSavePrefs=Einstellungen exportieren oder laden
