--- a/content/locale/es/foxtrick.properties
+++ b/content/locale/es/foxtrick.properties
@@ -949,9 +949,9 @@ tab.changes=Cambios
 tab.help=Ayuda
 
 foxtrick.prefs.basicPreferences=Preferencias básicas
-foxtrick.prefs.captionHTLanguage=Configuración de idioma
-foxtrick.prefs.captionHTDateformat=Configuración de formato de fecha
-foxtrick.prefs.captionHTCountry=Configuración de país
+foxtrick.prefs.setup.locale=Configuración de idioma
+foxtrick.prefs.setup.dateFormat=Configuración de formato de fecha
+foxtrick.prefs.setup.country=Configuración de país
 pref.printDateFormat=Formato de fecha para impresión
 
 foxtrick.prefs.captionShowOnStatusBar=Mostrar icono en la barra de estado
