--- a/content/locale/fa/foxtrick.properties
+++ b/content/locale/fa/foxtrick.properties
@@ -914,9 +914,9 @@ tab.changes=تغييرات
 tab.help=راهنما
 
 foxtrick.prefs.basicPreferences=تنظيمات اوليه
-foxtrick.prefs.captionHTLanguage=زبان
-foxtrick.prefs.captionHTDateformat=نوع تاريخ
-foxtrick.prefs.captionHTCountry=کشور
+foxtrick.prefs.setup.locale=زبان
+foxtrick.prefs.setup.dateFormat=نوع تاريخ
+foxtrick.prefs.setup.country=کشور
 foxtrick.prefs.captionShowOnStatusBar=ايکن موجود در نوار وظيفه
 foxtrick.prefs.captionCleanupBranch=تنظيمات ذخيره شده
 foxtrick.prefs.captionLoadSavePrefs=ورود و صدور تنظيمات
