--- a/content/locale/fi/foxtrick.properties
+++ b/content/locale/fi/foxtrick.properties
@@ -920,9 +920,9 @@ eksaväri-muokkaaja
 foxtrick.prefs.PrefDefaultWarningLabel=Esiasetusten varoitus
 foxtrick.prefs.PrefDefaultWarningText=Tarkistithan kieli ja valuutta -asetukset? Jotkin Foxtrickin ominaisuuksista ei toimi, jos kyseisiä asetuksia ei olla asetettu täsmällisesti.
 foxtrick.prefs.basicPreferences=Perusasetukset
-foxtrick.prefs.captionHTLanguage=Kieli
-foxtrick.prefs.captionHTDateformat=Päivämäärän muoto
-foxtrick.prefs.captionHTCountry=Maa
+foxtrick.prefs.setup.locale=Kieli
+foxtrick.prefs.setup.dateFormat=Päivämäärän muoto
+foxtrick.prefs.setup.country=Maa
 foxtrick.prefs.captionShowOnStatusBar=Tilapalkki-ikoni
 foxtrick.prefs.captionCleanupBranch=Tallennetut asetukset
 foxtrick.prefs.captionLoadSavePrefs=Viedä tai tuoda -asetukset
