--- a/content/locale/fur/foxtrick.properties
+++ b/content/locale/fur/foxtrick.properties
@@ -731,9 +731,9 @@ tab.help=Help
 
 foxtrick.prefs.PrefDefaultWarningLabel=Preset default warning
 foxtrick.prefs.PrefDefaultWarningText=Please check language and currency settings. Some FoxTrick features will not work if those settings are not set appropriately.
-foxtrick.prefs.captionHTLanguage=Language
-foxtrick.prefs.captionHTDateformat=Date format
-foxtrick.prefs.captionHTCountry=Country
+foxtrick.prefs.setup.locale=Language
+foxtrick.prefs.setup.dateFormat=Date format
+foxtrick.prefs.setup.country=Country
 foxtrick.prefs.captionShowOnStatusBar=Display status bar icon
 foxtrick.prefs.captionCleanupBranch=Stored preferences
 foxtrick.prefs.captionLoadSavePrefs=Export or import preferences
