--- a/content/locale/fy/foxtrick.properties
+++ b/content/locale/fy/foxtrick.properties
@@ -412,9 +412,9 @@ tab.matches=							Wedstriden
 tab.forum=							Foarum
 tab.links=							Koppelings
 tab.about=							Oer Foxtrick
-foxtrick.prefs.captionHTLanguage=					Taalynstellings
-foxtrick.prefs.captionHTDateformat=					Datumformaatynstellings
-foxtrick.prefs.captionHTCountry=					Lânynstellings
+foxtrick.prefs.setup.locale=					Taalynstellings
+foxtrick.prefs.setup.dateFormat=					Datumformaatynstellings
+foxtrick.prefs.setup.country=					Lânynstellings
 foxtrick.prefs.captionShowOnStatusBar=				Toan ikoan yn statusbalk
 foxtrick.prefs.captionCleanupBranch=				Opsleine foarkeuren
 foxtrick.prefs.captionLoadSavePrefs=				Foarkeuren ymportearje of eksportearje
