--- a/content/locale/gl/foxtrick.properties
+++ b/content/locale/gl/foxtrick.properties
@@ -463,9 +463,9 @@ tab.links=Ligazóns
 tab.about=Acerca de
 foxtrick.prefs.PrefDefaultWarningLabel=Aviso de preferencias por defecto
 foxtrick.prefs.PrefDefaultWarningText=Comproba a lingua e a moeda. Algunhas opcións do foxtrick non funcionarán se non se configuran correctamente
-foxtrick.prefs.captionHTLanguage=Lingua
-foxtrick.prefs.captionHTDateformat=Preferencias do formato da data
-foxtrick.prefs.captionHTCountry=Preferencias do país
+foxtrick.prefs.setup.locale=Lingua
+foxtrick.prefs.setup.dateFormat=Preferencias do formato da data
+foxtrick.prefs.setup.country=Preferencias do país
 foxtrick.prefs.captionShowOnStatusBar=Coloca unha icona na barra de estado
 foxtrick.prefs.captionCleanupBranch=Preferencias cargadas
 foxtrick.prefs.captionLoadSavePrefs=Exportar ou importar preferencias
