--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -863,9 +863,9 @@ tab.help=Pomoć
 foxtrick.prefs.PrefDefaultWarningLabel=Postaviti uobičajeno upozorenje
 foxtrick.prefs.PrefDefaultWarningText=Molimo provjerite vaša podešenja jezika i valute. Neke opcije neće raditi ako ta podešenja nisu usklađena.
 foxtrick.prefs.basicPreferences=Osnovna podešenja
-foxtrick.prefs.captionHTLanguage=Jezična podešenja
-foxtrick.prefs.captionHTDateformat=Podesiti format datuma
-foxtrick.prefs.captionHTCountry=Podesiti državu
+foxtrick.prefs.setup.locale=Jezična podešenja
+foxtrick.prefs.setup.dateFormat=Podesiti format datuma
+foxtrick.prefs.setup.country=Podesiti državu
 foxtrick.prefs.captionShowOnStatusBar=Foxtrickova ikona u statusnoj traci
 foxtrick.prefs.captionCleanupBranch=Spremljena podešenja
 foxtrick.prefs.captionLoadSavePrefs=Uvezi/izvezi podešenja
