--- a/content/locale/hu/foxtrick.properties
+++ b/content/locale/hu/foxtrick.properties
@@ -893,9 +893,9 @@ tab.about=Névjegy
 tab.changes=Módosítások
 tab.help=Súgó
 foxtrick.prefs.basicPreferences=Alapbeállítások
-foxtrick.prefs.captionHTLanguage=Nyelv
-foxtrick.prefs.captionHTDateformat=Dátumformátum
-foxtrick.prefs.captionHTCountry=Ország
+foxtrick.prefs.setup.locale=Nyelv
+foxtrick.prefs.setup.dateFormat=Dátumformátum
+foxtrick.prefs.setup.country=Ország
 foxtrick.prefs.captionShowOnStatusBar=Állapotsáv-ikon
 foxtrick.prefs.captionCleanupBranch=Tárolt beállítások
 foxtrick.prefs.captionLoadSavePrefs=A beállítások exportálása vagy importálása
