--- a/content/locale/it/foxtrick.properties
+++ b/content/locale/it/foxtrick.properties
@@ -925,9 +925,9 @@ ditor di colori in esadecimale
 foxtrick.prefs.PrefDefaultWarningLabel=Impostazioni predefinite
 foxtrick.prefs.PrefDefaultWarningText=Controlla le impostazioni di lingua e valuta. Alcune funzioni di FoxTrick non funzioneranno se queste informazioni sono sbagliate.
 foxtrick.prefs.basicPreferences=Preferenze di base
-foxtrick.prefs.captionHTLanguage=Impostazioni lingua
-foxtrick.prefs.captionHTDateformat=Impostazioni formato data
-foxtrick.prefs.captionHTCountry=Impostazioni paese
+foxtrick.prefs.setup.locale=Impostazioni lingua
+foxtrick.prefs.setup.dateFormat=Impostazioni formato data
+foxtrick.prefs.setup.country=Impostazioni paese
 foxtrick.prefs.captionShowOnStatusBar=Visualizza icona nella barra di stato
 foxtrick.prefs.captionCleanupBranch=Impostazioni memorizzate
 foxtrick.prefs.captionLoadSavePrefs=Esporta o importa impostazioni
