--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -465,9 +465,9 @@ tab.links=Nuorodos
 tab.about=Apie
 foxtrick.prefs.PrefDefaultWarningLabel=Išankstinis įspėjimas
 foxtrick.prefs.PrefDefaultWarningText=Prašome patikrinti kalbos ir valiutos nustatymus. Kaikurie Foxtrick patobulinimai neveiks, jeigu šie nustatymai bus nustatyti neteisingai.
-foxtrick.prefs.captionHTLanguage=Kalbos nustatymai
-foxtrick.prefs.captionHTDateformat=Datos formato nustatymai
-foxtrick.prefs.captionHTCountry=Šalies nustatymai
+foxtrick.prefs.setup.locale=Kalbos nustatymai
+foxtrick.prefs.setup.dateFormat=Datos formato nustatymai
+foxtrick.prefs.setup.country=Šalies nustatymai
 foxtrick.prefs.captionShowOnStatusBar=Rodyti paveikslėlį būsenos eilutėje
 foxtrick.prefs.captionCleanupBranch=Išsaugoti nustatymai
 foxtrick.prefs.captionLoadSavePrefs=Išsaugoti arba įkelti nustatymus
