--- a/content/locale/mk/foxtrick.properties
+++ b/content/locale/mk/foxtrick.properties
@@ -626,9 +626,9 @@ tab.help=Помош
 
 foxtrick.prefs.PrefDefaultWarningText=Ве молиме проверете ги подесувањата за јазик и валута. Некои карактеристики на FoxTrick нема да работат ако тие подесувања не се наместени соодветно.
 foxtrick.prefs.PrefDefaultWarningText=Please check language and currency settings. Some FoxTrick features will not work if those settings are not set appropriately.
-foxtrick.prefs.captionHTLanguage=Подесувања за јазик
-foxtrick.prefs.captionHTDateformat=Подесувања за формат на датум
-foxtrick.prefs.captionHTCountry=Подесувања за држава
+foxtrick.prefs.setup.locale=Подесувања за јазик
+foxtrick.prefs.setup.dateFormat=Подесувања за формат на датум
+foxtrick.prefs.setup.country=Подесувања за држава
 foxtrick.prefs.captionShowOnStatusBar=Прикажи икона во статус лента
 foxtrick.prefs.captionCleanupBranch=Складирани особини
 foxtrick.prefs.captionLoadSavePrefs=Изнеси или внеси особини
