--- a/content/locale/mt/foxtrick.properties
+++ b/content/locale/mt/foxtrick.properties
@@ -846,9 +846,9 @@ tab.help=Għajnuna
 foxtrick.prefs.PrefDefaultWarningLabel=Twissija default issetjata minn qabel
 foxtrick.prefs.PrefDefaultWarningText=Jekk jogħġbok iċċekkja s-settings tal-lingwa u tal-munita. Xi karatteristiċi ta' Foxtrick m'humiex se jaħdmu jekk dawn is-settings ma jkunux issettjati kif suppost.
 foxtrick.prefs.basicPreferences=Preferenzi Bażiċi
-foxtrick.prefs.captionHTLanguage=Lingwa
-foxtrick.prefs.captionHTDateformat=Format tad-data
-foxtrick.prefs.captionHTCountry=Pajjiż
+foxtrick.prefs.setup.locale=Lingwa
+foxtrick.prefs.setup.dateFormat=Format tad-data
+foxtrick.prefs.setup.country=Pajjiż
 foxtrick.prefs.captionShowOnStatusBar=Simbolu tal-bar bl-istat
 foxtrick.prefs.captionCleanupBranch=Preferenzi storjati
 foxtrick.prefs.captionLoadSavePrefs=Esporta jew importa l-preferenzi
