--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -976,9 +976,9 @@ tab.changes=Veranderingen
 tab.help=Help
 
 foxtrick.prefs.basicPreferences=Basisinstellingen
-foxtrick.prefs.captionHTLanguage=Taal
-foxtrick.prefs.captionHTDateformat=Datum
-foxtrick.prefs.captionHTCountry=Land
+foxtrick.prefs.setup.locale=Taal
+foxtrick.prefs.setup.dateFormat=Datum
+foxtrick.prefs.setup.country=Land
 
 foxtrick.prefs.captionCleanupBranch=Opgeslagen voorkeuren
 foxtrick.prefs.captionLoadSavePrefs=Exporteer of importeer voorkeuren
