--- a/content/locale/nn/foxtrick.properties
+++ b/content/locale/nn/foxtrick.properties
@@ -896,10 +896,10 @@ tab.help=Hjelp
 
 
 foxtrick.prefs.basicPreferences=Standardinnstillingar
-foxtrick.prefs.captionHTLanguage=Språk
+foxtrick.prefs.setup.locale=Språk
 
-foxtrick.prefs.captionHTDateformat=Dateoformat
-foxtrick.prefs.captionHTCountry=Land
+foxtrick.prefs.setup.dateFormat=Dateoformat
+foxtrick.prefs.setup.country=Land
 foxtrick.prefs.captionShowOnStatusBar=Statuslinje-ikon
 foxtrick.prefs.captionCleanupBranch=Lagra innstillingar
 foxtrick.prefs.captionLoadSavePrefs=Eksporter eller importer innstillingar
