--- a/content/locale/pl/foxtrick.properties
+++ b/content/locale/pl/foxtrick.properties
@@ -840,9 +840,9 @@ exowy edytor kolorów
 foxtrick.prefs.PrefDefaultWarningLabel=Preset default warning
 foxtrick.prefs.PrefDefaultWarningText=Sprawdź ustawienia języka oraz waluty. Niektóre funkcje Foxtricka nie będą działać poprawnie jeśli wcześniej wspomniane opcje nie będą ustawione poprawnie.
 foxtrick.prefs.basicPreferences=Podstawowe ustawienia
-foxtrick.prefs.captionHTLanguage=Język
-foxtrick.prefs.captionHTDateformat=Format daty
-foxtrick.prefs.captionHTCountry=Kraj
+foxtrick.prefs.setup.locale=Język
+foxtrick.prefs.setup.dateFormat=Format daty
+foxtrick.prefs.setup.country=Kraj
 foxtrick.prefs.captionShowOnStatusBar=Ikona na pasku zadań Firefoxa
 foxtrick.prefs.captionCleanupBranch=Ustawienia domyślne
 foxtrick.prefs.captionLoadSavePrefs=Eksport/Import zapisanych ustawień
