--- a/content/locale/pt/foxtrick.properties
+++ b/content/locale/pt/foxtrick.properties
@@ -503,11 +503,11 @@ tab.links=Links
 tab.about=Sobre
 foxtrick.prefs.PrefDefaultWarningLabel=Pre-definir um aviso padrão
 foxtrick.prefs.PrefDefaultWarningText=Verifique a linguagem das definições correntes. Algumas definições e features não vão trabalhar se as definições não forem as mesmas.
-foxtrick.prefs.captionHTLanguage=Definições de Linguagem
-foxtrick.prefs.captionHTLanguageAutoSet=Verifique para mudar automaticamente de linguagem quando muda também no HT.
+foxtrick.prefs.setup.locale=Definições de Linguagem
+foxtrick.prefs.setup.localeAutoSet=Verifique para mudar automaticamente de linguagem quando muda também no HT.
 
-foxtrick.prefs.captionHTDateformat=Definições de formato de data
-foxtrick.prefs.captionHTCountry=Definições do país
+foxtrick.prefs.setup.dateFormat=Definições de formato de data
+foxtrick.prefs.setup.country=Definições do país
 foxtrick.prefs.captionShowOnStatusBar=Mostrar ícone na barra de estado
 foxtrick.prefs.captionCleanupBranch=Preferências guardadas
 foxtrick.prefs.captionLoadSavePrefs=Exportar ou importar preferências
