--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -998,9 +998,9 @@ tab.changes=Modificari
 tab.help=Ajutor
 
 foxtrick.prefs.basicPreferences=Preferinte de baza
-foxtrick.prefs.captionHTLanguage=Setari limba
-foxtrick.prefs.captionHTDateformat=Setari format data
-foxtrick.prefs.captionHTCountry=Setari tara
+foxtrick.prefs.setup.locale=Setari limba
+foxtrick.prefs.setup.dateFormat=Setari format data
+foxtrick.prefs.setup.country=Setari tara
 
 foxtrick.prefs.captionCleanupBranch=Preferinte stocate
 foxtrick.prefs.captionLoadSavePrefs=Exporta si importa preferinte
