--- a/content/locale/ru/foxtrick.properties
+++ b/content/locale/ru/foxtrick.properties
@@ -985,9 +985,9 @@ tab.changes=Изменения
 tab.help=Помощь
 
 foxtrick.prefs.basicPreferences=Основные настройки
-foxtrick.prefs.captionHTLanguage=Язык
-foxtrick.prefs.captionHTDateformat=Формат даты
-foxtrick.prefs.captionHTCountry=Страна
+foxtrick.prefs.setup.locale=Язык
+foxtrick.prefs.setup.dateFormat=Формат даты
+foxtrick.prefs.setup.country=Страна
 
 foxtrick.prefs.captionCleanupBranch=Сохранённые настройки
 foxtrick.prefs.captionLoadSavePrefs=Импорт и экспорт настроек
