--- a/content/locale/sk/foxtrick.properties
+++ b/content/locale/sk/foxtrick.properties
@@ -853,9 +853,9 @@ tab.help=Pomoc
 foxtrick.prefs.PrefDefaultWarningLabel=Predvolená výstraha
 foxtrick.prefs.PrefDefaultWarningText=Prosím skontrolujte jazykové a menové nastavenia. Niektoré FoxTrickové moduly nebudú pracovať pokiaľ tieto nastavenia nebudú správne nastavené.
 foxtrick.prefs.basicPreferences=Základné nastavenia
-foxtrick.prefs.captionHTLanguage=Jazykové nastavenia
-foxtrick.prefs.captionHTDateformat=Nastavenia formátu dátumu
-foxtrick.prefs.captionHTCountry=Nastavenia krajiny
+foxtrick.prefs.setup.locale=Jazykové nastavenia
+foxtrick.prefs.setup.dateFormat=Nastavenia formátu dátumu
+foxtrick.prefs.setup.country=Nastavenia krajiny
 foxtrick.prefs.captionShowOnStatusBar=Zobraziť ikonu v stavovej lište
 foxtrick.prefs.captionCleanupBranch=Nastavenia Foxtricku
 foxtrick.prefs.captionLoadSavePrefs=Exportovať alebo importovať nastavenia
