--- a/content/locale/sq/foxtrick.properties
+++ b/content/locale/sq/foxtrick.properties
@@ -639,10 +639,10 @@ tab.help=Ndihmë
 ink te editori i ngjyrave
 foxtrick.prefs.PrefDefaultWarningLabel=Paralajmërimi për kthim në standarte
 foxtrick.prefs.PrefDefaultWarningText=Ju lutemi kontrolloni zgjedhjet për gjuhën dhe monedhën. Disa opcione të FoxTrick nuk do punojnë nëse këto nuk janë zgjedhur si duhet.
-foxtrick.prefs.captionHTLanguage=Zgjedhja e gjuhës
-foxtrick.prefs.captionHTLanguageAutoSet=Kliko për ta ndryshuar gjuhën automatikisht sa herë që ndryshoni gjuhën në HT.
-foxtrick.prefs.captionHTDateformat=Zgjedhjet e formatit të datës
-foxtrick.prefs.captionHTCountry=Zgjedhjet e shtetit
+foxtrick.prefs.setup.locale=Zgjedhja e gjuhës
+foxtrick.prefs.setup.localeAutoSet=Kliko për ta ndryshuar gjuhën automatikisht sa herë që ndryshoni gjuhën në HT.
+foxtrick.prefs.setup.dateFormat=Zgjedhjet e formatit të datës
+foxtrick.prefs.setup.country=Zgjedhjet e shtetit
 foxtrick.prefs.captionShowOnStatusBar=Trego ikonën e kollonës së gjëndjes
 foxtrick.prefs.captionCleanupBranch=Preferencat e ruajtura
 foxtrick.prefs.captionLoadSavePrefs=Eksporto ose importo preferencat
