--- a/content/locale/sv/foxtrick.properties
+++ b/content/locale/sv/foxtrick.properties
@@ -1306,9 +1306,9 @@ tab.changes=Ändringar
 tab.help=Hjälp
 
 foxtrick.prefs.basicPreferences=Grundläggande inställningar
-foxtrick.prefs.captionHTLanguage=Språk
-foxtrick.prefs.captionHTDateformat=Datumformat
-foxtrick.prefs.captionHTCountry=Land
+foxtrick.prefs.setup.locale=Språk
+foxtrick.prefs.setup.dateFormat=Datumformat
+foxtrick.prefs.setup.country=Land
 
 foxtrick.prefs.captionCleanupBranch=Lagrade inställningar
 foxtrick.prefs.captionLoadSavePrefs=Exportera eller importera inställningar
