--- a/content/locale/uk/foxtrick.properties
+++ b/content/locale/uk/foxtrick.properties
@@ -564,10 +564,10 @@ tab.help=Допомога
 
 foxtrick.prefs.PrefDefaultWarningLabel=Попередження!
 foxtrick.prefs.PrefDefaultWarningText=Будь ласка, перевірте налаштування мови та валюти. Деякі модулі FoxTrick не працюватимуть, якщо ці опції будуть обрані некоректно.
-foxtrick.prefs.captionHTLanguage=Мовні налаштування
-foxtrick.prefs.captionHTLanguageAutoSet=Оберіть для автоматичної зміни мови разом зі зміною Ваших мовних налаштувань в HT
-foxtrick.prefs.captionHTDateformat=Налаштування формату дати
-foxtrick.prefs.captionHTCountry=Налаштування країни
+foxtrick.prefs.setup.locale=Мовні налаштування
+foxtrick.prefs.setup.localeAutoSet=Оберіть для автоматичної зміни мови разом зі зміною Ваших мовних налаштувань в HT
+foxtrick.prefs.setup.dateFormat=Налаштування формату дати
+foxtrick.prefs.setup.country=Налаштування країни
 foxtrick.prefs.captionShowOnStatusBar=Відображати іконку FoxTrick у рядку стану
 foxtrick.prefs.captionCleanupBranch=Скидання налаштувань
 foxtrick.prefs.captionLoadSavePrefs=Експорт та імпорт налаштувань
