--- a/content/locale/vi/foxtrick.properties
+++ b/content/locale/vi/foxtrick.properties
@@ -832,9 +832,9 @@ tab.help=Trợ giúp
 foxtrick.prefs.PrefDefaultWarningLabel=Thiết lập cảnh cáo mặc định
 foxtrick.prefs.PrefDefaultWarningText=Làm ơn kiểm tra thiết lập ngôn ngữ và tiền tệ. Một số tính năng FoxTrick sẽ không hoạt động nếu những thiết lập đó không được cài đặt chính xác.
 foxtrick.prefs.basicPreferences=Tùy chọn cơ bản
-foxtrick.prefs.captionHTLanguage=Ngôn ngữ
-foxtrick.prefs.captionHTDateformat=Định dạng ngày
-foxtrick.prefs.captionHTCountry=Đất nước
+foxtrick.prefs.setup.locale=Ngôn ngữ
+foxtrick.prefs.setup.dateFormat=Định dạng ngày
+foxtrick.prefs.setup.country=Đất nước
 foxtrick.prefs.captionShowOnStatusBar=Hiển thị biểu tượng thanh tình trạng
 foxtrick.prefs.captionCleanupBranch=Tùy chọn được lưu giữ
 foxtrick.prefs.captionLoadSavePrefs=Đưa ra và nhập vào những tùy chọn
