--- a/content/locale/zh/foxtrick.properties
+++ b/content/locale/zh/foxtrick.properties
@@ -983,9 +983,9 @@ tab.changes=最近更新
 tab.help=帮助
 
 foxtrick.prefs.basicPreferences=基本首选项
-foxtrick.prefs.captionHTLanguage=语言
-foxtrick.prefs.captionHTDateformat=日期格式
-foxtrick.prefs.captionHTCountry=国家
+foxtrick.prefs.setup.locale=语言
+foxtrick.prefs.setup.dateFormat=日期格式
+foxtrick.prefs.setup.country=国家
 foxtrick.prefs.captionShowOnStatusBar=状态栏图标
 foxtrick.prefs.captionCleanupBranch=清理首选项
 foxtrick.prefs.captionLoadSavePrefs=导出或导入首选项
