--- a/content/locale/es_SU/foxtrick.properties
+++ b/content/locale/es_SU/foxtrick.properties
@@ -896,9 +896,9 @@ tab.help=Ayuda
 foxtrick.prefs.PrefDefaultWarningLabel=Programar alerta predeterminada
 foxtrick.prefs.PrefDefaultWarningText=Por favor checa la configuración de idioma y moneda. Algunas funciones de Foxtrick si la configuración no es apropiada.
 foxtrick.prefs.basicPreferences=Preferencias Básicas
-foxtrick.prefs.captionHTLanguage=Idioma
-foxtrick.prefs.captionHTDateformat=Formato de Fecha
-foxtrick.prefs.captionHTCountry=País
+foxtrick.prefs.setup.locale=Idioma
+foxtrick.prefs.setup.dateFormat=Formato de Fecha
+foxtrick.prefs.setup.country=País
 foxtrick.prefs.captionShowOnStatusBar=Icono de barra de estado
 foxtrick.prefs.captionCleanupBranch=Preferencias Guardadas
 foxtrick.prefs.captionLoadSavePrefs=Exportar o Importar preferencias
