--- a/content/locale/he/htlang.xml
+++ b/content/locale/he/htlang.xml
@@ -29,46 +29,46 @@
 
 	<!-- positions appearing on players page. copy "value". translate "short" -->
 	<positions>
-		<position type="Keeper" value="Keeper" short="Ke" />
-		<position type="Central defender" value="Central defender" short="Cd" />
-		<position type="Wing back" value="Wing back" short="Wb" />
-		<position type="Inner midfielder" value="Inner midfielder" short="Im" />
-		<position type="Winger" value="Winger" short="Wi" />
-		<position type="Forward" value="Forward" short="Fo" />
+		<position type="Keeper" value="שוער" short="Ke" />
+		<position type="Central defender" value="בלם" short="Cd" />
+		<position type="Wing back" value="מגן" short="Wb" />
+		<position type="Inner midfielder" value="קשר" short="Im" />
+		<position type="Winger" value="קיצוני" short="Wi" />
+		<position type="Forward" value="חלוץ" short="Fo" />
 	</positions>
 
 	<!-- specialties appearing on players page. copy "value". translate "short" -->
 	<specialties>
-		<specialty type="Unpredictable" value="Unpredictable" short="Un" />
-		<specialty type="Powerful" value="Powerful" short="Po" />
-		<specialty type="Quick" value="Quick" short="Qu" />
-		<specialty type="Technical" value="Technical" short="Te" />
-		<specialty type="Head" value="Head" short="He" />
-		<specialty type="Regainer" value="Regainer" short="Re" />
+		<specialty type="Unpredictable" value="בלתי צפוי" short="Un" />
+		<specialty type="Powerful" value="חזק" short="Po" />
+		<specialty type="Quick" value="מהיר" short="Qu" />
+		<specialty type="Technical" value="טכני" short="Te" />
+		<specialty type="Head" value="משחק ראש" short="He" />
+		<specialty type="Regainer" value="משתקם" short="Re" />
 	</specialties>
 
 	<!-- levels word connections appearing denominations page. copy "text" -->
 	<levels>
-		<level text="divine" value="20" />
-		<level text="utopian" value="19" />
-		<level text="magical" value="18" />
-		<level text="mythical" value="17" />
-		<level text="extra-terrestrial" value="16" />
-		<level text="titanic" value="15" />
-		<level text="supernatural" value="14" />
-		<level text="world class" value="13" />
-		<level text="magnificent" value="12" />
-		<level text="brilliant" value="11" />
-		<level text="outstanding" value="10" />
-		<level text="formidable" value="9" />
-		<level text="excellent" value="8" />
-		<level text="solid" value="7" />
-		<level text="passable" value="6" />
-		<level text="inadequate" value="5" />
-		<level text="weak" value="4" />
-		<level text="poor" value="3" />
-		<level text="wretched" value="2" />
-		<level text="disastrous" value="1" />
-		<level text="non-existent" value="0" />
+		<level text="עילאי" value="20" />
+		<level text="אוטופי" value="19" />
+		<level text="קסום" value="18" />
+		<level text="אגדי" value="17" />
+		<level text="שמיימי" value="16" />
+		<level text="אימתני" value="15" />
+		<level text="על טבעי" value="14" />
+		<level text="עולמי" value="13" />
+		<level text="נהדר" value="12" />
+		<level text="מבריק" value="11" />
+		<level text="יוצא מן הכלל" value="10" />
+		<level text="מעולה" value="9" />
+		<level text="מצוין" value="8" />
+		<level text="טוב" value="7" />
+		<level text="סביר" value="6" />
+		<level text="בינוני" value="5" />
+		<level text="חלש" value="4" />
+		<level text="עלוב" value="3" />
+		<level text="גרוע" value="2" />
+		<level text="איום" value="1" />
+		<level text="לא קיים" value="0" />
 	</levels>
 </language>
