--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -82,11 +82,12 @@ foxtrick.ForumYouthIcons.settings.desc=Adauga iconita pentru setarile FoxTrick
 #FormatPostingText
 foxtrick.FormatPostingText.desc=Inlocuieste tagurile Foxtrick HT-ML cu taguri HTML
 foxtrick.CopyPostID.desc=Copiaza Id-ul postului in clipboard in loc sa-l afiseze pe forum
-foxtrick.CopyPostID.AddCopyIcon.desc=Adauga o iconita 'Copiaza Id-ul postului' inainte primului postID
 foxtrick.CopyPosting.desc=Adauga o iconita pentru a copia mesajul si referintele inclusiv
 foxtrick.ShowForumPrefButton.desc=Link catre setarile forumului pe toate paginile forum
+foxtrick.Links.desc=Modul de baza esential pentru ca toate celelalte module sa functioneze corect.
 foxtrick.LinksLeague.desc=Adauga legaturi externe la pagina seriei
 foxtrick.LinksTeam.desc=Adauga legaturi externe la pagina echipei
+foxtrick.LinksTeam.AlltidTeamCompare.desc=Adauga functii AlltidTeamCompare
 foxtrick.LinksCountry.desc=Adauga legaturi externe la pagina tarii
 foxtrick.LinksChallenges.desc=Adauga legaturi externe la pagina provocarilor
 foxtrick.LinksEconomy.desc=Adauga legaturi externe la pagina finantelor
@@ -162,7 +163,7 @@ foxtrick.ExtraPlayerInfo.Flag.desc=Arata nationalitatea jucatorilor sub forma de
 foxtrick.PlayerFilters.desc=Adauga o casuta de selectare pentru a filtra jucatorii pe pagina jucatorilor.
 foxtrick.HistoryStats.desc=Realizeaza o imagine de ansablu a istoriei echipei.
 foxtrick.LargeFlags.desc=Mareste steagul pe pagina jucatorului daca fetele sunt folosite.
-foxtrick.GoToPostBox.desc=Adauga o casuta MergiLaX in forumuri
+foxtrick.GoToPostBox.desc=Adauga o casuta MergiLaX in forumuri. Ascunde modulul HT "Marcheaza ca necitit de la"!! Poti folosi modulul "Marcheaza necitite" pentru a avea aceasta functie in antetul postarii.
 foxtrick.TeamSelectBox.desc=Inlocuieste lista  cu jucatori cu o casuta de selectare a jucatorilor. Dand click pe antetul casutei va schimba intre lista si casuta de selectare.
 foxtrick.CopyPlayerAd.desc=Un buton pe pagina jucatorului pentru a putea copia un detaliile unui jucator in clipboard (format ht-ml)
 foxtrick.CopyPlayerAd.Sorted.desc=Sorteaza calitatile in ordine descrescatoare.
@@ -209,8 +210,6 @@ foxtrick.GuestbookAlltidFlags.desc=Optiuni cartea de oaspeti
 foxtrick.GuestbookAlltidFlags.desc=Adauga userilor steagurile Alltid in Cartea de Oaspeti
 foxtrick.GuestbookAlltidFlags.HideAnswerToLinks.desc=Ascunde linkurile Raspunde din Cartea de Oaspeti
 foxtrick.SkinPlugin.desc=Adauga Hattrick-ului propria interfata CSS
-foxtrick.SkinPlugin.Skin1.desc=Activeaza skin-ul 1 (stil link)
-foxtrick.SkinPlugin.Skin2.desc=Activeaza skin-ul 2 (stil link)
 foxtrick.CurrencyConverter.desc=Conversie valutara HT
 foxtrick.MovePlayerStatement.desc=Muta declaratia jucatorului la fata jucatorului. Daca fetele sunt dezactivate, declaratiile vor fi inlaturate
 foxtrick.TickerColoring.desc=Diferitele evenimente afisate in Tickerul de stiri sunt colorate.
@@ -245,6 +244,7 @@ foxtrick.NewMail.desc=Evidentiaza numerotarea mesajelor noi din casuta de mesaj 
 foxtrick.CopyYouth.desc=Functii de copiere pentru rapoarte de juniori si surse
 foxtrick.CopyYouth.TrainingReport.desc=Raport antrenament
 foxtrick.CopyYouth.ScoutComment.desc=Comentariu cautaror de talente
+foxtrick.CopyYouth.RejectedToHTY.desc=Copiaza comentariul cautatorului de talente si deschide HT-Youthclub pe respingerea jucatorului
 foxtrick.CopyYouth.PlayerSource.desc=Sursa jucator
 foxtrick.CopyYouth.FixturesSource.desc=Sursa meciuri urmatoare
 foxtrick.PlayerBirthday.desc=Arata ultimele si urmatoarele zile de nastere in pagina jucatorilor.
@@ -297,7 +297,6 @@ foxtrick.SkillTable.ColouredYouth.desc=Afiseaza calitatile colorate
 foxtrick.HighlightCupwins.desc=Evidentiaza echipele castigatoare in meciurile din cupa pe pagina meciurilor de cupa
 foxtrick.HighlightCupwins.highlight_outsider.desc=Evidentiaza meciurile castiga de echipe cu rank mai mic
 foxtrick.SkillTranslation.desc=Adauga traducerea calitatilor in Engleza pe pagina de ajutor
-foxtrick.ReadHtPrefs.desc=Detecteaza automat limba, tara, moneda si formatul datei (updatat dupa login)
 #CountryList
 foxtrick.CountryList.desc=Modificari pentru numele tarilor
 foxtrick.CountryList.SelectBoxes.desc=Schimba numele tarilor din Engleza in numele originale
@@ -355,6 +354,9 @@ foxtrick.ShowLineupSet.Ownerless.desc=Evidentiaza echipele fara proprietar
 foxtrick.ShowLineupSet.Winning.desc=Evidentiaza echipele castigatoare
 foxtrick.SupporterStatsEnhancements.desc=Evidentiaza jucatorii actuali in statisticile supporter
 foxtrick.MobileEnhancements.desc=Set de imbunatatiri pentru mobile
+foxtrick.MatchOrderInterface.desc=Modificari la interfata ordinelor de meci.Scoate in evidenta jucatorii care au jucat in ultimul meci si adauga diferente predicatorului de ratinguri.
+foxtrick.MatchOrderInterface.DisplayRatingsAlongside.desc=Arata ratingurile prezise langa.
+foxtrick.MatchOrderInterface.ShowSpecialties.desc=Arata specialitatile jucatorilor
 -----------------------------------------------------------------------------
 
 
@@ -387,7 +389,7 @@ YouthPromotes.today=Jucatorul poate fi promovat astazi!
 # links
 foxtrick.links.boxheader=Linkuri
 
-#teamstats
+#teamstats+filters
 foxtrick.TeamStats.label=Situatia lotului
 foxtrick.TeamStats.PlayerNotToOld.label=Jucatori < 19 ani
 foxtrick.TeamStats.PlayerToOld.label=Jucatori >= 19 ani
@@ -397,6 +399,7 @@ foxtrick.TeamStats.TransferListed.label=Jucatori aflati pe lista de transferuri
 foxtrick.TeamStats.Pictures.label=Poze
 foxtrick.TeamStats.PlayedLatest.label=Jucat in ultimul meci
 foxtrick.TeamStats.NotPlayedLatest.label=Nejucat in ultimul meci
+foxtrick.TeamStats.ActivePlayers.label=Jucatori activi
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -510,6 +513,12 @@ match.type.youth.league=Campionat juniori
 match.type.youth.friendly=Amical juniori
 match.type.youth.friendly.cup=Amical juniori (Reguli cupa)
 
+matchOrder.noMatchSelected=Niciun meci selectat
+matchOrder.comparedTo=Comparat cu:
+matchOrder.previousPrediction=Predictia anterioara
+matchOrder.previousPrediction=Predictia anterioara
+matchOrder.AddMatchManually=Adauga manual un meci
+
 #Skills
 Playmaking=Constructie
 Playmaking.abbr=Pm
@@ -573,6 +582,11 @@ Stamina.abbr=Rez
 Form=Forma
 Form.abbr=Fo
 
+Loyalty=Loialitate
+Loyalty.abbr=Lo
+MotherClubBonus=Bonus club mama
+MotherClubBonus.abbr=CM
+
 Status=Status
 Status.abbr=Status
 
@@ -590,6 +604,7 @@ Last_stars=Ultimul rating
 Last_stars.abbr=Rat
 Last_position=Ultima pozitie
 Last_position.abbr=Poz
+Last_match_played_as=A jucat %1 min ca %2 in ultimul lui meci.
 
 Bruised=Accidentat usor
 Bruised.abbr=Aus
@@ -728,7 +743,8 @@ CopyYouth.fixturesSource=Copiaza sursa meciurilor urmatoare.
 CopyYouth.fixturesSource.copied=Sursa meciurilor urmatoare a fost copiata.
 CopyYouth.goto=Mergi la %s.
 
-CopySelected.desc=Selectie Copiere cu Ctrl+C.
+CopySelected.desc=Copiere selectie cu Ctrl + C.
+SpecialPaste.desc=Paste selectie cu Shift + Click Stanga.
 
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 
@@ -844,7 +860,6 @@ foxtrick.RapidId.ViewById=Vizualizeaza dupa ID
 # SkillTable
 foxtrick.SkillTable.Switch_view_title=Schimba modul de vizualizare al tabelului.
 foxtrick.SkillTable.Add_homegrown_title=Adauga toti jucatorii crescuti la club din actualul
-foxtrick.SkillTable.Remove_bot_players_title=Inlatura jucatorii echipelor bot
 foxtrick.SkillTable.showTimeInClub_title=Arata timpul de cand jucatorul a sosit la echipa de seniori
 foxtrick.SkillTable.detach=Detach
 
@@ -908,13 +923,15 @@ LocalTime.hattrick.title=Ora este afisata in ora Hattrick.Clic pe ceas pentru a 
 LocalTime.local=Ora locala
 LocalTime.local.title=Ora este afisata in ora locala.Clic pe ceas pentru a schimba pe ora Hattrick.
 
+# Links
+Links.feeds=Fluxuri ale listei de linkuri (separata de linii)
+
 #actions
 Copy=Copiaza
 View=Vizualizeaza
 Switch_view=Schimba modul de vizualizare
 Detach=Detach
 AddHomegrown=Adauga jucatorii crescuti la club
-RemoveBotPlayers=Inlatura jucatorii bot
 showTimeInClub=Arata timpul de cand sunt la club
 Filter=Filtru
 sort.up=Up
@@ -959,6 +976,7 @@ oauth.link=Primeste codul de verificare de la chpp.hattrick.org
 oauth.success=FoxTrick a fost autorizat! Te rog reincarca aceasta pagina pentru a vedea informatii detaliate oferite de FoxTrick.
 
 api.failure=Accesul catre datele hattrick a esuat. Trebuie sa autorizezi FoxTrick pentru a accesa datele echipei tale. Daca ai facut-o deja, verifica reteaua sau incearca mai tarziu.
+api.serverUnavailable=Server nedisponibil
 
 exception.error=Error %s
 
@@ -997,8 +1015,9 @@ tab.about=Despre
 tab.changes=Modificari
 tab.help=Ajutor
 
-foxtrick.prefs.basicPreferences=Preferinte de baza
-foxtrick.prefs.setup.locale=Setari limba
+foxtrick.prefs.setup=Configurare
+foxtrick.prefs.setup.desc=Acestea sunt setarile pe care FoxTrick le-a detectat. Daca sunt incorecte {va rugam raportati}.
+foxtrick.prefs.setup.locale=Locale
 foxtrick.prefs.setup.dateFormat=Setari format data
 foxtrick.prefs.setup.country=Setari tara
 
@@ -1008,6 +1027,11 @@ foxtrick.prefs.captionCleanupBranch=Preferinte stocate
 foxtrick.prefs.captionLoadSavePrefs=Exporta sau importa preferinte
 #statusbarpref
 foxtrick.prefs.labelCleanupBranch=Restaureaza setarile implicite. (doar setari implicite, nu personale)
+foxtrick.prefs.oauth.delete=Sterge Auth pentru echipa selectata.
+# NOTE - please preserve the braces, inner content will be converted to link
+foxtrick.prefs.oauth.delete.desc=Se aplica doar pentru acest navigator. Pentru a inlatura total accesul FoxTrick asupra unei echipe, folositi  {CHPP management} Hattrickului.
+
+
 # note to translators: the %here will be automatically converted into a link to chpp settings. The % sign gets removed, making 'here' the clickable link.
 foxtrick.prefs.labelDeleteToken=Ştergere OAuth jeton / secret pentru teamid selectate. Acest lucru va elimina accesul echipei la fişierele Hattrick CHPP numai din această copie FoxTrick. Dacă doriţi să revocati accesul FoxTrick pentru o echipă în întregime, utilizati gestionarea Hattrick CHPP de aici%.
 foxtrick.prefs.labelDisableAll=Dezactiveazate toate modulele FoxTrick
@@ -1031,11 +1055,15 @@ link.homepage=Pagina de start
 link.bugTracker=Raporteaza un bug
 link.hattrickForum=Forum FoxTrick pe Hattrick
 link.screenshots=Capturi
-link.nightlyFirefox=Development builds for Firefox
-link.nightlyChrome=Development builds for Google Chrome
+link.nightlyFirefox=Baza dezvoltare pentru Firefox
+link.nightlyChrome=Baza dezvoltare pentru Google Chrome
+link.nightlyOpera=Baza dezvoltare pentru Opera
+link.nightlySafari=Baza dezvoltare pentru Safari
 link.recentChanges=Schimbari recente
 
-foxtrick.showReleaseNotes=Arata notele lansarii dupa updateul FoxTrick
+module.link=Poti copia si lipi acest link in forum pentru a te directiona aici.
+
+foxtrick.showReleaseNotes=Arata notele lansarii dupa fiecare update
 foxtrick.versionReleaseNotes=Arata notele lansarii pentru:
 
 about.copyright=Copyright
@@ -1051,7 +1079,7 @@ delete_foxtrick_branches_ask=Esti sigur ca vrei sa restaurezi setarile implicite
 delete_oauth_ask=Stergere OAuth jeton / secret pentru teamid %s?
 disable_all_foxtrick_modules_ask=Esti sigur ca vrei sa dezactivezi toate modulele?
 
-foxtrick.prefs.AdditionalOptions=Alte optiuni
+foxtrick.prefs.AdditionalOptions=Optiuni generale
 foxtrick.prefs.smallcopyicons=Iconite mici de copiat in locul casutei separate
 foxtrick.prefs.DisplayHTMLDebugOutput=Arata log-ul Foxtrick in josul paginii (pentru debugging)
 
