Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7671 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -903,6 +903,7 @@ HTMSPrediction.prediction=Претпостав. резултат
 HTMSPrediction.winDrawLoss=победа/нереш./пораз
 HTMSPrediction.title=HTMS меч анализа
 HTMSPrediction.changePrediction=Промени предвиђање
+HTMSPrediction.team=Тим
 
 #htms table of statistical truth
 truthTable.table=HTMS Табела статистичке истинитости
@@ -911,8 +912,9 @@ truthTable.name=Тим
 truthTable.real_position=Стварна поз.
 truthTable.real_points=Освојено бодова
 truthTable.predicted_points=Претпос. Бодова
-truthTable.difference=Разлика
-				
+truthTable.difference=±
+truthTable.notAvailableYet=Подаци још увек нису доступни. Идите на HTMS tда креирате потребне податке
+
 # HTMSPoints
 HTMSPoints=HTMS-бодови:
 HTMSPoints.AbilityAndPotential=вештине:%1 / потенцијал:%2
