Serbian translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7706 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -366,6 +366,7 @@ foxtrick.MobileEnhancements.desc=Побољшања за мобилне теле
 foxtrick.MatchOrderInterface.desc=Мења интерфејс за издавање налога. Сенчи играче који су играли у последњем мечу и приказује разлику између предвиђених оцена.
 foxtrick.MatchOrderInterface.DisplayRatingsAlongside.desc=Прикажи истовремено и предвиђање за оцене
 foxtrick.MatchOrderInterface.ShowSpecialties.desc=Прикажи специјалност играча
+foxtrick.ContractableHeaders.desc=Омогућава ширење и скупљање свих заглавља на ХТ страницама. Памти ваша индивидуална подешавања на бази типа странице и назива заглавља.
 
 # ----------------------------------------------------------------------------
 
@@ -610,6 +611,10 @@ Speciality.abbr=Сп
 
 Last_match=Последњи меч
 Last_match.abbr=Посл. меч
+Last_stars_EndOfGame=Звездице на крају последњег меча
+Last_stars_EndOfGame.abbr=ЗВ(к)
+Last_stars_decline=Опадање броја звездица на крају меча
+Last_stars_decline.abbr=Раз.
 Last_stars=Звездице на последњем мечу
 Last_stars.abbr=ЗВ
 Last_position=Позиција на последњем мечу
@@ -766,6 +771,14 @@ CopyYouth.playerSource.copied=Изворни код играча је ископ
 CopyYouth.fixturesSource=Копирај изворни код за мечеве
 CopyYouth.fixturesSource.copied=Изворни код за мечеве је ископиран у меморију.
 CopyYouth.goto=Иди на %s
+
+MatchReportFormat.lineup=Поставе
+MatchReportFormat.halfTime=полувреме
+MatchReportFormat.fullTime=крај
+
+match.role.setPieces.abbr=ПР
+match.role.captain.abbr=Кап.
+
 CopySelected.desc=Копирај селектовано са 'Ctrl+C'
 SpecialPaste.desc='Paste' са 'Shift + леви клик мишем'.
 
@@ -914,6 +927,7 @@ truthTable.real_points=Освојено бодова
 truthTable.predicted_points=Претпос. Бодова
 truthTable.difference=±
 truthTable.notAvailableYet=Подаци још увек нису доступни. Идите на HTMS tда креирате потребне податке
+truthTable.tableAtHTMS=Табела на HTMS веб страници
 
 # HTMSPoints
 HTMSPoints=HTMS-бодови:
