renamed contractable-headers to header-toggle. added to safari
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7718 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -367,7 +367,7 @@ foxtrick.MobileEnhancements.desc=Побољшања за мобилне теле
 foxtrick.MatchOrderInterface.desc=Мења интерфејс за издавање налога. Сенчи играче који су играли у последњем мечу и приказује разлику између предвиђених оцена.
 foxtrick.MatchOrderInterface.DisplayRatingsAlongside.desc=Прикажи истовремено и предвиђање за оцене
 foxtrick.MatchOrderInterface.ShowSpecialties.desc=Прикажи специјалност играча
-foxtrick.ContractableHeaders.desc=Омогућава ширење и скупљање свих заглавља на ХТ страницама. Памти ваша индивидуална подешавања на бази типа странице и назива заглавља.
+foxtrick.HeaderToggle.desc=Омогућава ширење и скупљање свих заглавља на ХТ страницама. Памти ваша индивидуална подешавања на бази типа странице и назива заглавља.
 
 # ----------------------------------------------------------------------------
 
