Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7735 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -366,8 +366,14 @@ foxtrick.SupporterStatsEnhancements.desc=Означава играче који 
 foxtrick.MobileEnhancements.desc=Побољшања за мобилне телефоне
 foxtrick.MatchOrderInterface.desc=Мења интерфејс за издавање налога. Сенчи играче који су играли у последњем мечу и приказује разлику између предвиђених оцена.
 foxtrick.MatchOrderInterface.DisplayRatingsAlongside.desc=Прикажи истовремено и предвиђање за оцене
-foxtrick.MatchOrderInterface.ShowSpecialties.desc=Прикажи специјалност играча
+foxtrick.MatchOrderInterface.Specialties.desc=Прикажи специјалност играча
+foxtrick.MatchSimulator.desc=Убацује симулатор за мечеве на страницу меч налога. 
+foxtrick.MatchSimulator.RatingsOnTop.desc=Приказује предвиђање оцена са горње стране
+foxtrick.MatchSimulator.RatingsBellow.desc=Приказује предвиђање оцена са десне стране 
+foxtrick.MatchSimulator.RatingsRight.desc=Приказује предвиђање оцена са доње стране
 foxtrick.HeaderToggle.desc=Омогућава ширење и скупљање свих заглавља на ХТ страницама. Памти ваша индивидуална подешавања на бази типа странице и назива заглавља.
+foxtrick.MatchOrderInterface.PlayedLastMatch.desc=Highlights players which played in the last match and shows last position and time played in the details box
+
 
 # ----------------------------------------------------------------------------
 
