Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7739 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -75,7 +75,7 @@ foxtrick.ForumYouthIcons.settings.desc=Додаје иконицу за пост
 foxtrick.ShowMessageButton.desc=Додаје дугме 'Пошаљи поруку' на страну са подацима о менаџеру.
 #FormatPostingText
 foxtrick.FormatPostingText.desc=Замењује Фокстрикове HT-ML тагове, HTML таговима (на пример: [pre] element) (за девелопере).
-foxtrick.FormatPostingText.NestedQoutesAsSpoilers.desc=Приказује цитате у постовима као споилер. Упишите број нивова који желите да буде замењен у поље испод.
+foxtrick.FormatPostingText.NestedQoutesAsSpoilers.desc=Приказује цитате у постовима као споилер. Упишите број нивоа цитата који желите да буде замењен споилерима у поље испод.
 foxtrick.CopyPostID.desc=Преусмеравање ПостИД-а.
 foxtrick.CopyPostID.AddCopyIcon.desc=Додаје иконицу Копирај ПостИД испред првог ПостИД-а.
 foxtrick.CopyPosting.desc=Додај иконицу за копирање поста на форуму заједно са референцама.
