Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7741 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -580,6 +580,40 @@ categories.R=Р
 categories.E1=E1
 categories.E2=E2
 
+match.pos.kp=Голман
+match.pos.kp.abbr=ГО
+match.pos.lb=Леви бек
+match.pos.lb.abbr=ЛБ
+match.pos.lcd=Леви штопер
+match.pos.lcd.abbr=ЛШТ
+match.pos.mcd=Централни штопер
+match.pos.mcd.abbr=ЦШТ
+match.pos.rcd=Десни штопер
+match.pos.rcd.abbr=ДШТ
+match.pos.rb=Десни бек
+match.pos.rb.abbr=ДБ
+match.pos.lw=Лево крило
+match.pos.lw.abbr=ЛК
+match.pos.lcm=Леви везни
+match.pos.lcm.abbr=ЛВЗН
+match.pos.mcm=Централни везни
+match.pos.mcm.abbr=ЦВЗН
+match.pos.rcm=Десни везни
+match.pos.rcm.abbr=ДВЗН
+match.pos.rw=Десно крило
+match.pos.rw.abbr=ДК
+match.pos.lf=Леви нападач
+match.pos.lf.abbr=ЛН
+match.pos.mf=Централни нападач
+match.pos.mf.abbr=ЦН
+match.pos.rf=Десни нападач
+match.pos.rf.abbr=ДН
+
+match.role.setPieces=Извођач прекида
+match.role.setPieces.abbr=ПР
+match.role.captain=Капитен
+match.role.captain.abbr=Кап.
+
 General=Опште карактеристике
 
 PlayerNumber=Број дреса
@@ -784,9 +818,6 @@ CopyYouth.goto=Иди на %s
 MatchReportFormat.lineup=Поставе
 MatchReportFormat.halfTime=полувреме
 MatchReportFormat.fullTime=крај
-
-match.role.setPieces.abbr=ПР
-match.role.captain.abbr=Кап.
 
 CopySelected.desc=Копирај селектовано са 'Ctrl+C'
 SpecialPaste.desc='Paste' са 'Shift + леви клик мишем'.
