Russian translation update to r7743
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7749 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ru/foxtrick.properties
+++ b/content/locale/ru/foxtrick.properties
@@ -1,5 +1,5 @@
 ﻿# ru-RU (Russian language file)
-# based on MASTER language file r7736
+# based on MASTER language file r7743
 # by _KOHb_ [teamId=28914]
 
 # Hints:
@@ -351,6 +351,8 @@ foxtrick.MobileEnhancements.desc=Набор улучшений для мобил
 foxtrick.MatchOrderInterface.desc=Исправление для интерфейса указаний на матч. 
 foxtrick.MatchOrderInterface.PlayedLastMatch.desc=Подсвечивать игравших в предыдущем матче и показывает игровую позицию и сыгранное время в дополнительном окне
 foxtrick.MatchOrderInterface.Specialties.desc=Показывать специализации игроков
+foxtrick.MatchOrderInterface.StayOnPage.desc=Оставаться на странице указаний после отправки
+foxtrick.MatchOrderInterface.SwapPositions.desc=Добавить ссылку для смены игроками фланга
 foxtrick.MatchSimulator.desc=Добавить симулятор матча на страницу расстановки. 
 foxtrick.MatchSimulator.RatingsOnTop.desc=Оставить предсказание рейтингов сверху
 foxtrick.MatchSimulator.RatingsBellow.desc=Показать предсказание рейтингов справа
@@ -519,8 +521,9 @@ match.type.youth.friendly.cup=Юношеский товарищеский мат
 matchOrder.noMatchSelected=Матч не выбран
 matchOrder.comparedTo=В сравнении с:
 matchOrder.previousPrediction=Предыдущим предсказанием
-matchOrder.previousPrediction=Предыдущим предсказанием
-matchOrder.AddMatchManually=Добавить матч
+matchOrder.AddMatchManually=Добавить матч вручную
+matchOrder.swapPositions=Поменять фланги
+
 
 #Skills
 Playmaking=Полузащита
@@ -833,7 +836,7 @@ TeamPopupLinks.prefsCaption=Настройки всплывающего меню
 TeamPopupLinks.ShowByDefault=Показывать в основном меню
 TeamPopupLinks.ShowOnMore=Показывать в меню 'больше'
 
-total_stars=Общее количество звёзд:
+total_stars=Общее количество звёзд
 
 # FlagCollectionToMap
 foxtrick.FlagCollectionToMap.ShowMap=Показать карту
