git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7751 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ru/foxtrick.properties
+++ b/content/locale/ru/foxtrick.properties
@@ -622,8 +622,8 @@ Stamina.abbr=Вы
 Form=Форма
 Form.abbr=Фо
 
-Loyalty=Преданность
-Loyalty.abbr=Пр
+Loyality=Преданность
+Loyality.abbr=Пр
 MotherClubBonus=Бонус родного клуба
 MotherClubBonus.abbr=РК
 
